Imported Upstream version 7.0.26